--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC+7
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC+7
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
