--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com</groupId>
 	<artifactId>health-care</artifactId>
 	<version>0.0.1</version>
+	<packaging>war</packaging>
 	<name>health-care</name>
 	<description>health-care</description>
 	<properties>
