--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,12 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/health-care?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/health-care?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:34.126.132.74}:3306/onstora_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+spring.datasource.username=supper-app
+spring.datasource.password=="dMiJf2P'3FT$XX
 spring.datasource.hikari.data-source-properties.useUnicode=true
 spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
 
