--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 jwt.secret=hunggiang
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -17,8 +17,8 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:34.126.132.74}:3306/onstora_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
 spring.datasource.username=supper-app
 spring.datasource.password=="dMiJf2P'3FT$XX
-spring.datasource.hikari.data-source-properties.useUnicode=true
-spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
+#spring.datasource.hikari.data-source-properties.useUnicode=true
+#spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.main.allow-bean-definition-overriding=true
