--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ openai.api.key=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
 openai.api.url=https://api.openai.com/v1/chat/completions
 CURRENT_LOGGED_IN_KEY = "_currentLoggedIn";
 TOKEN_KEY = "__xk";
+
+#duong dan file
+storage.location=uploads/images
