--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,5 @@ openai.api.url=https://api.openai.com/v1/chat/completions
 CURRENT_LOGGED_IN_KEY = "_currentLoggedIn";
 TOKEN_KEY = "__xk";
 
-#duong dan file
-storage.location=uploads/images
+dropbox.appKey=s17jiph8wq64tgr
+dropbox.appSecret=gc0tf77cg8zin1e
