--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,18 @@
 			<artifactId>cloudinary-core</artifactId>
 			<version>1.33.0</version>
 		</dependency>
-
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+		<!-- https://mvnrepository.com/artifact/com.dropbox.core/dropbox-core-sdk -->
+		<dependency>
+			<groupId>com.dropbox.core</groupId>
+			<artifactId>dropbox-core-sdk</artifactId>
+			<version>5.4.5</version>
+		</dependency>
 
 	</dependencies>
 
