--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ TOKEN_KEY = "__xk";
 
 dropbox.appKey=s17jiph8wq64tgr
 dropbox.appSecret=gc0tf77cg8zin1e
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
