--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,8 @@ openai.api.url=https://api.openai.com/v1/chat/completions
 CURRENT_LOGGED_IN_KEY = "_currentLoggedIn";
 TOKEN_KEY = "__xk";
 
-dropbox.appKey=s17jiph8wq64tgr
-dropbox.appSecret=gc0tf77cg8zin1e
+dropbox.appKey=ghfg0i7ekrvp1dx
+dropbox.appSecret=2jzye2rogd0ew8p
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+dropbox.accessToken=sl.BqeiA7g47RdqPXew40HyB-0X5BC_2IL5Hci81waXua96VSEwQjSTqlcYZ2nmPqRxivY6yyW1-P_ZX8VnPArR7rABCcmEgUmtBRvcQTQ5DEVIMBB4KscI3siT-FW8Lce71fk9OytuztE4Sc0
