--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 server.port=8080
 jwt.secret=hunggiang
 
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -11,21 +10,21 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/health-care?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/diary-app?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
 #spring.datasource.username=root
 #spring.datasource.password=
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:34.126.132.74}:3306/onstora_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-spring.datasource.username=supper-app
-spring.datasource.password=="dMiJf2P'3FT$XX
-
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:34.126.132.74}:3306/onstora_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+#spring.datasource.username=supper-app
+#spring.datasource.password=="dMiJf2P'3FT$XX
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.16.2.4}:3306/diary_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+spring.datasource.username=diary_dev
+spring.datasource.password=sYiLzPl1CAOKjiJ
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.main.allow-bean-definition-overriding=true
 spring.web.resources.static-locations=classpath:/webapp/
 spring.thymeleaf.cache=false
-#spring.thymeleaf.check-template-location=false
 spring.thymeleaf.mode=LEGACYHTML5
-
 
 openai.model=gpt-3.5-turbo
 openai.api.key=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 
