--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
 			<artifactId>cloudinary-core</artifactId>
 			<version>1.33.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.29.0</version>
+		</dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
