--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,15 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/diary-app?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/diary-app?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:34.126.132.74}:3306/onstora_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
 #spring.datasource.username=supper-app
 #spring.datasource.password=="dMiJf2P'3FT$XX
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.16.2.4}:3306/diary_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-#spring.datasource.username=diary_dev
-#spring.datasource.password=sYiLzPl1CAOKjiJ
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.16.2.4}:3306/diary_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+spring.datasource.username=diary_dev
+spring.datasource.password=sYiLzPl1CAOKjiJ
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
