--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 jwt.secret=hunggiang
 
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.properties.hibernate.jdbc.time_zone=UTC+7
@@ -13,9 +13,11 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/diary-app?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
 #spring.datasource.username=root
 #spring.datasource.password=
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:sql12.freesqldatabase.com}:3306/sql12670604?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-spring.datasource.username=sql12670604
-spring.datasource.password=4u1fdW5T6W
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql-1704bf2-chaubuiluong-98de.a.aivencloud.com}:21737/diary-app?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_PIvXsFtrJ4gNZ8Gj5Fm
+
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.16.2.4}:3306/diary_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
 #spring.datasource.username=diary_dev
 #spring.datasource.password=sYiLzPl1CAOKjiJ
