--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,13 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 #spring.datasource.username=root
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql-1704bf2-chaubuiluong-98de.a.aivencloud.com}:21737/diary-app?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_PIvXsFtrJ4gNZ8Gj5Fm
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql-1704bf2-chaubuiluong-98de.a.aivencloud.com}:21737/diary-app?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+#spring.datasource.username=avnadmin
+#spring.datasource.password=AVNS_PIvXsFtrJ4gNZ8Gj5Fm
 
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.16.2.4}:3306/diary_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
-#spring.datasource.username=diary_dev
-#spring.datasource.password=sYiLzPl1CAOKjiJ
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.16.2.4}:3306/diary_dev?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true
+spring.datasource.username=diary_dev
+spring.datasource.password=sYiLzPl1CAOKjiJ
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
